--- a/Salida/LATEX.tex
+++ b/Salida/LATEX.tex
@@ -1,37 +1,230 @@
-% A.B.B. Dinámicos vs. A.B.B. Greedy 
-% Written by Edisson López 
-% Contact: ediloaz@gmail.com 
-% Cartago, Costa Rica 
-  
-% For the course: 
-% 	Operations Research (of Costa Rica Institute of Technology) 
-% 	Teacher: Dr. Jose Francisco Torres 
+% Technological of Costa Rica 
+% Operations Research
+% 3rd Project
+% Linear Programming
+% Alonso Rivas Solano (2014079916)
+% Daniel Herrera Brenes (2015130539)
+% Edisson López Díaz (2013103311)
  
-% HEADER { 
-\documentclass[a4paper,twocolumn,10pt]{article} 
-\usepackage{tikz} 
-\usepackage{pgfplots} 
-\pgfplotsset{compat=1.10} 
-\usetikzlibrary{shapes.geometric,arrows,fit,matrix,positioning} 
-\tikzset 
-{ 
-    treenode/.style = {circle, draw=black, align=center, minimum size=1cm} 
-} 
-\usepackage{lmodern} 
-\usepackage{float} 
-\usepackage[T1]{fontenc} 
-%\usepackage[spanish]{babel} 
+\documentclass{beamer} 
+\usetheme[progressbar=frametitle]{metropolis} 
+\setbeamertemplate{frame numbering}[fraction] 
+\useoutertheme{metropolis} 
+\useinnertheme{metropolis} 
+\usefonttheme{metropolis} 
+\usecolortheme{metropolis} 
 \usepackage[utf8]{inputenc} 
-\usepackage[left=0.7cm, top=1.5cm, right=0.7cm, bottom=2cm]{geometry} 
-\newcommand\tab[1][1cm]{\hspace*{#1}} 
-\newcommand\minitab[1][0.5cm]{\hspace*{#1}} 
-\title{A.B.B. Dinámicos vs. A.B.B. Greedy} 
-\author{Edisson López Díaz} 
-\date{\today}  
-% } HEADER 
-% DOCUMENT { 
+\usepackage{lmodern} 
+\usepackage[T1]{fontenc} 
+\usepackage[spanish]{babel} 
+\usepackage{tikz} 
+\usepackage{natbib} 
+\usepackage{hyperref} 
+\usepackage{multirow} 
+\usepackage{colortbl} 
+\usepackage{helvet} 
+\usepackage[export]{adjustbox} % loads also graphicx 
+\usepackage{lipsum} 
+%Definiciones 
+\definecolor{color_columna_candidata}{rgb}{0, 0.424, 0.455} 
+\definecolor{color_pivote}{rgb}{0.973, 0.80, 0.341} 
+\definecolor{color_blanco}{rgb}{1,1,1} 
+% Commands 
+\newcommand\tab[1][1cm]{\hspace*{#1}}  
+\newcommand\minitab[1][0.5cm]{\hspace*{#1}}  
+% Tittle information 
+\title{Símplex} 
+\subtitle{Operations Research} 
+\author[A. \& D. \& E.]{% 
+\texorpdfstring{% 
+\begin{columns} 
+\column{.33\linewidth} 
+\centering 
+\\  Daniel Herrera  \\ 2015130539 \\ 
+\column{.33\linewidth} 
+\centering 
+\\  Edisson López \\ 2013103311 \\ 
+\column{.33\linewidth} 
+\centering 
+\\ Alonso Rivas \\ 2014079916 \\ 
+\end{columns} 
+} 
+{Author 1, Author 2, Author 3} 
+} 
+\date{} 
+\institute{% 
+\texorpdfstring{% 
+\begin{columns} 
+\column{.9\linewidth} 
+\centering 
+\\ 
+Tecnológico de Costa Rica \\ 
+Semestre 1, 2018 \\ 
+24 de mayo, 2018 
+\end{columns} 
+} 
+} 
+%Inicio del documento 
 \begin{document} 
+
+% - - 1st Slide - - ; 
+% - - Cover - - - - ; 
+\begin{frame}[plain,t] 
 \maketitle 
+\end{frame} 
+
+
+% - - - - - - - - - ;
+% - - - - 2 - - - - ;
+% Algoritmo Sı́mplex: uno o dos slides que expliquen
+% un poco el algoritmo Sı́mplex.
+\section{Algoritmo Símplex}
+\begin{frame}
+\lipsum[1-1]
+\end{frame}
+
+\begin{frame}
+\lipsum[1-1]
+\end{frame}
+
+ 
+\begin{frame}  
+\frametitle{Tabla inicial} 
+\begin{table}[H] 
+\begin{center} 
+\begin{tabular}{|*{9}{c|}} 
+\hline 
+\textbf{Z}  & \textbf{x$_{1}$} & \textbf{x$_{2}$} & \textbf{x$_{3}$} & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{s$_{3}$} & \textbf{s$_{4}$} & \textbf{•} \\\hline \hline 
+1.0 & -60.0 & -35.0 & -20.0 & 0 & 0 & 0 & 0 & 0 \\\hline 
+0.0 & 8.0 & 6.0 & 1.0 & 1.0 & 0.0 & 0.0 & 0.0 & 48.0\\ 
+\hline 
+0.0 & 4.0 & 2.0 & 1.5 & 0.0 & 1.0 & 0.0 & 0.0 & 20.0\\ 
+\hline 
+0.0 & 2.0 & 1.5 & 0.5 & 0.0 & 0.0 & 1.0 & 0.0 & 8.0\\ 
+\hline 
+0.0 & 0.0 & 1.0 & 0.0 & 0.0 & 0.0 & 0.0 & 1.0 & 5.0\\ 
+\hline 
+\end{tabular} 
+\caption{Tabla inicial.} 
+\end{center} 
+\end{table} 
+\end{frame} 
+ 
+ 
+\begin{frame}  
+\frametitle{Tabla intermedia \#1} 
+\begin{table}[H] 
+\begin{center} 
+\begin{tabular}{|*{9}{c|}} 
+\hline 
+\textbf{Z}  & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{x$_{1}$}} & \textbf{x$_{2}$} & \textbf{x$_{3}$} & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{s$_{3}$} & \textbf{s$_{4}$} & \textbf{•} \\\hline \hline 
+1.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{-60.0} & -35.0 & -20.0 & 0 & 0 & 0 & 0 & 0 \\\hline 
+0.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{8.0} & 6.0 & 1.0 & 1.0 & 0.0 & 0.0 & 0.0 & 48.0\\ 
+\hline 
+0.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{4.0} & 2.0 & 1.5 & 0.0 & 1.0 & 0.0 & 0.0 & 20.0\\ 
+\hline 
+0.0 & \cellcolor{color_pivote}\textbf{2.0} & 1.5 & 0.5 & 0.0 & 0.0 & 1.0 & 0.0 & 8.0\\ 
+\hline 
+0.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0.0} & 1.0 & 0.0 & 0.0 & 0.0 & 0.0 & 1.0 & 5.0\\ 
+\hline 
+\end{tabular} 
+\caption{Tabla intermedia 1, durante el pivoteo.} 
+\end{center} 
+\end{table} 
+\end{frame} 
+ 
+ 
+\begin{frame}  
+\frametitle{Tabla intermedia \#2} 
+\begin{table}[H] 
+\begin{center} 
+\begin{tabular}{|*{9}{c|}} 
+\hline 
+\textbf{Z}  & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{x$_{1}$}} & \textbf{x$_{2}$} & \textbf{x$_{3}$} & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{s$_{3}$} & \textbf{s$_{4}$} & \textbf{•} \\\hline \hline 
+1.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 10.0 & -5.0 & 0 & 0 & 30.0 & 0 & 240.0 \\\hline 
+0.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0.0} & 0.0 & -1.0 & 1.0 & 0.0 & -4.0 & 0.0 & 16.0\\ 
+\hline 
+0.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0.0} & -1.0 & 0.5 & 0.0 & 1.0 & -2.0 & 0.0 & 4.0\\ 
+\hline 
+0.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{1.0} & 0.8 & 0.2 & 0.0 & 0.0 & 0.5 & 0.0 & 4.0\\ 
+\hline 
+0.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0.0} & 1.0 & 0.0 & 0.0 & 0.0 & 0.0 & 1.0 & 5.0\\ 
+\hline 
+\end{tabular} 
+\caption{Tabla intermedia 2, con la columna de 2 canonizada.} 
+\end{center} 
+\end{table} 
+\end{frame} 
+ 
+ 
+\begin{frame}  
+\frametitle{Tabla intermedia \#2} 
+\begin{table}[H] 
+\begin{center} 
+\begin{tabular}{|*{9}{c|}} 
+\hline 
+\textbf{Z}  & \textbf{x$_{1}$} & \textbf{x$_{2}$} & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{x$_{3}$}} & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{s$_{3}$} & \textbf{s$_{4}$} & \textbf{•} \\\hline \hline 
+1.0 & 0 & 10.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{-5.0} & 0 & 0 & 30.0 & 0 & 240.0 \\\hline 
+0.0 & 0.0 & 0.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{-1.0} & 1.0 & 0.0 & -4.0 & 0.0 & 16.0\\ 
+\hline 
+0.0 & 0.0 & -1.0 & \cellcolor{color_pivote}\textbf{0.5} & 0.0 & 1.0 & -2.0 & 0.0 & 4.0\\ 
+\hline 
+0.0 & 1.0 & 0.8 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0.2} & 0.0 & 0.0 & 0.5 & 0.0 & 4.0\\ 
+\hline 
+0.0 & 0.0 & 1.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0.0} & 0.0 & 0.0 & 0.0 & 1.0 & 5.0\\ 
+\hline 
+\end{tabular} 
+\caption{Tabla intermedia 2, durante el pivoteo.} 
+\end{center} 
+\end{table} 
+\end{frame} 
+ 
+ 
+\begin{frame}  
+\frametitle{Tabla intermedia \#3} 
+\begin{table}[H] 
+\begin{center} 
+\begin{tabular}{|*{9}{c|}} 
+\hline 
+\textbf{Z}  & \textbf{x$_{1}$} & \textbf{x$_{2}$} & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{x$_{3}$}} & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{s$_{3}$} & \textbf{s$_{4}$} & \textbf{•} \\\hline \hline 
+1.0 & 0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0 & 10.0 & 10.0 & 0 & 280.0 \\\hline 
+0.0 & 0.0 & -2.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0.0} & 1.0 & 2.0 & -8.0 & 0.0 & 24.0\\ 
+\hline 
+0.0 & 0.0 & -2.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{1.0} & 0.0 & 2.0 & -4.0 & 0.0 & 8.0\\ 
+\hline 
+0.0 & 1.0 & 1.2 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0.0} & 0.0 & -0.5 & 1.5 & 0.0 & 2.0\\ 
+\hline 
+0.0 & 0.0 & 1.0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0.0} & 0.0 & 0.0 & 0.0 & 1.0 & 5.0\\ 
+\hline 
+\end{tabular} 
+\caption{Tabla intermedia 3, con la columna de 4 canonizada.} 
+\end{center} 
+\end{table} 
+\end{frame} 
+ 
+ 
+\begin{frame}  
+\frametitle{Tabla final} 
+\begin{table}[H] 
+\begin{center} 
+\begin{tabular}{|*{9}{c|}} 
+\hline 
+\textbf{Z}  & \textbf{x$_{1}$} & \textbf{x$_{2}$} & \textbf{x$_{3}$} & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{s$_{3}$} & \textbf{s$_{4}$} & \textbf{•} \\\hline \hline 
+1.0 & 0 & 0 & 0 & 0 & 10.0 & 10.0 & 0 & 280.0 \\\hline 
+0.0 & 0.0 & -2.0 & 0.0 & 1.0 & 2.0 & -8.0 & 0.0 & 24.0\\ 
+\hline 
+0.0 & 0.0 & -2.0 & 1.0 & 0.0 & 2.0 & -4.0 & 0.0 & 8.0\\ 
+\hline 
+0.0 & 1.0 & 1.2 & 0.0 & 0.0 & -0.5 & 1.5 & 0.0 & 2.0\\ 
+\hline 
+0.0 & 0.0 & 1.0 & 0.0 & 0.0 & 0.0 & 0.0 & 1.0 & 5.0\\ 
+\hline 
+\end{tabular} 
+\caption{Tabla final.} 
+\end{center} 
+\end{table} 
+\end{frame} 
+ 
 \end{document}
 % } DOCUMENT 
 % Última línea del documento
