--- a/LATEX.tex
+++ b/LATEX.tex
@@ -95,23 +95,23 @@ Semestre 1, 2018 \\
 \begin{alertblock}{Maximizar} 
 \begin{itemize} 
 \item $Z = -300 Camiones
- - 200 Automoviles
+ - 200   Carros
 $ 
 \end{itemize} 
 \end{alertblock} 
 \begin{alertblock}{Restricciones} 
 \begin{enumerate} 
 \item $ 0,0Camiones
-  + 0,0 Automoviles
+  + 0,0   Carros
  \leq 1$ 
 \item $ 0,0Camiones
-  + 0,0 Automoviles
+  + 0,0   Carros
  \leq 1$ 
 \item $ 1Camiones
-  + 0 Automoviles
+  + 0   Carros
  \geq 30$ 
 \item $ 0Camiones
-  + 1 Automoviles
+  + 1   Carros
  \geq 20$ 
 \end{enumerate} 
 \end{alertblock} 
@@ -127,16 +127,16 @@ $
 \begin{tabular}{|*{10}{c|}} 
 \hline 
 \textbf{Z}  & \textbf{Camiones
-} & \textbf{Automoviles
+} & \textbf{  Carros
 } & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{e$_{1}$} & \textbf{e$_{2}$} & \textbf{a$_{1}$} & \textbf{a$_{2}$} & \textbf{•} \\\hline \hline 
 1 & -300 & -200 & 0 & 0 & 0 & 0 & 1M & 1M & 0 \\\hline 
 0 & 0,0 & 0,0 & 1 & 0 & 0 & 0 & 0 & 0 & 1\\ 
 \hline 
 0 & 0,0 & 0,0 & 0 & 1 & 0 & 0 & 0 & 0 & 1\\ 
 \hline 
-0 & 1 & 0 & 0 & 0 & 1 & 0 & 1 & 0 & 30\\ 
+0 & 1 & 0 & 0 & 0 & -1 & 0 & 1 & 0 & 30\\ 
 \hline 
-0 & 0 & 1 & 0 & 0 & 0 & 1 & 0 & 1 & 20\\ 
+0 & 0 & 1 & 0 & 0 & 0 & -1 & 0 & 1 & 20\\ 
 \hline 
 \end{tabular}} 
 \caption{Tabla inicial.} 
@@ -153,16 +153,16 @@ $
 \begin{tabular}{|*{10}{c|}} 
 \hline 
 \textbf{Z}  & \textbf{Camiones
-} & \textbf{Automoviles
+} & \textbf{  Carros
 } & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{e$_{1}$} & \textbf{e$_{2}$} & \textbf{a$_{1}$} & \textbf{a$_{2}$} & \textbf{•} \\\hline \hline 
-1 & -300-1M & -200-1M & 0 & 0 & -1M & -1M & 0 & 0 & 0-50M \\\hline 
+1 & -300-1M & -200-1M & 0 & 0 & 1M & 1M & 0 & 0 & 0-50M \\\hline 
 0 & 0,0 & 0,0 & 1 & 0 & 0 & 0 & 0 & 0 & 1\\ 
 \hline 
 0 & 0,0 & 0,0 & 0 & 1 & 0 & 0 & 0 & 0 & 1\\ 
 \hline 
-0 & 1 & 0 & 0 & 0 & 1 & 0 & 1 & 0 & 30\\ 
+0 & 1 & 0 & 0 & 0 & -1 & 0 & 1 & 0 & 30\\ 
 \hline 
-0 & 0 & 1 & 0 & 0 & 0 & 1 & 0 & 1 & 20\\ 
+0 & 0 & 1 & 0 & 0 & 0 & -1 & 0 & 1 & 20\\ 
 \hline 
 \end{tabular}} 
 \caption{Tabla intermedia 1, con las columnas a$_{i}$ canonizadas.} 
@@ -180,16 +180,16 @@ $
 \begin{tabular}{|*{10}{c|}} 
 \hline 
 \textbf{Z}  & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{Camiones
-}} & \textbf{Automoviles
+}} & \textbf{  Carros
 } & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{e$_{1}$} & \textbf{e$_{2}$} & \textbf{a$_{1}$} & \textbf{a$_{2}$} & \textbf{•} \\\hline \hline 
-1 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{-300-1M} & -200-1M & 0 & 0 & -1M & -1M & 0 & 0 & 0-50M \\\hline 
+1 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{-300-1M} & -200-1M & 0 & 0 & 1M & 1M & 0 & 0 & 0-50M \\\hline 
 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0,0} & 0,0 & 1 & 0 & 0 & 0 & 0 & 0 & 1\\ 
 \hline 
 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0,0} & 0,0 & 0 & 1 & 0 & 0 & 0 & 0 & 1\\ 
 \hline 
-0 & \cellcolor{color_pivote}\textbf{1} & 0 & 0 & 0 & 1 & 0 & 1 & 0 & 30\\ 
+0 & \cellcolor{color_pivote}\textbf{1} & 0 & 0 & 0 & -1 & 0 & 1 & 0 & 30\\ 
 \hline 
-0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 1 & 0 & 0 & 0 & 1 & 0 & 1 & 20\\ 
+0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 1 & 0 & 0 & 0 & -1 & 0 & 1 & 20\\ 
 \hline 
 \end{tabular}} 
 \caption{Tabla intermedia 1, durante el pivoteo.} 
@@ -207,16 +207,16 @@ $
 \begin{tabular}{|*{10}{c|}} 
 \hline 
 \textbf{Z}  & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{Camiones
-}} & \textbf{Automoviles
+}} & \textbf{  Carros
 } & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{e$_{1}$} & \textbf{e$_{2}$} & \textbf{a$_{1}$} & \textbf{a$_{2}$} & \textbf{•} \\\hline \hline 
-1 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & -200-1M & 0 & 0 & 300 & -1M & 300+1M & 0 & 9000-20M \\\hline 
-0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0,0 & 1 & 0 & -0,0 & 0 & -0,0 & 0 & 0,5\\ 
+1 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & -200-1M & 0 & 0 & -300 & 1M & 300+1M & 0 & 9000-20M \\\hline 
+0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0,0 & 1 & 0 & 0,0 & 0 & -0,0 & 0 & 0,5\\ 
 \hline 
-0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0,0 & 0 & 1 & -0,0 & 0 & -0,0 & 0 & 0,4\\ 
+0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0,0 & 0 & 1 & 0,0 & 0 & -0,0 & 0 & 0,4\\ 
 \hline 
-0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{1} & 0 & 0 & 0 & 1 & 0 & 1 & 0 & 30\\ 
+0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{1} & 0 & 0 & 0 & -1 & 0 & 1 & 0 & 30\\ 
 \hline 
-0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 1 & 0 & 0 & 0 & 1 & 0 & 1 & 20\\ 
+0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 1 & 0 & 0 & 0 & -1 & 0 & 1 & 20\\ 
 \hline 
 \end{tabular}} 
 \caption{Tabla intermedia 2, con la columna de 2 canonizada.} 
@@ -233,16 +233,16 @@ $
 \begin{tabular}{|*{10}{c|}} 
 \hline 
 \textbf{Z}  & \textbf{Camiones
-} & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{Automoviles
+} & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{  Carros
 }} & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{e$_{1}$} & \textbf{e$_{2}$} & \textbf{a$_{1}$} & \textbf{a$_{2}$} & \textbf{•} \\\hline \hline 
-1 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{-200-1M} & 0 & 0 & 300 & -1M & 300+1M & 0 & 9000-20M \\\hline 
-0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0,0} & 1 & 0 & -0,0 & 0 & -0,0 & 0 & 0,5\\ 
+1 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{-200-1M} & 0 & 0 & -300 & 1M & 300+1M & 0 & 9000-20M \\\hline 
+0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0,0} & 1 & 0 & 0,0 & 0 & -0,0 & 0 & 0,5\\ 
 \hline 
-0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0,0} & 0 & 1 & -0,0 & 0 & -0,0 & 0 & 0,4\\ 
+0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0,0} & 0 & 1 & 0,0 & 0 & -0,0 & 0 & 0,4\\ 
 \hline 
-0 & 1 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0 & 0 & 1 & 0 & 1 & 0 & 30\\ 
+0 & 1 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0 & 0 & -1 & 0 & 1 & 0 & 30\\ 
 \hline 
-0 & 0 & \cellcolor{color_pivote}\textbf{1} & 0 & 0 & 0 & 1 & 0 & 1 & 20\\ 
+0 & 0 & \cellcolor{color_pivote}\textbf{1} & 0 & 0 & 0 & -1 & 0 & 1 & 20\\ 
 \hline 
 \end{tabular}} 
 \caption{Tabla intermedia 2, durante el pivoteo.} 
@@ -260,19 +260,72 @@ $
 \begin{tabular}{|*{10}{c|}} 
 \hline 
 \textbf{Z}  & \textbf{Camiones
-} & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{Automoviles
+} & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{  Carros
 }} & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{e$_{1}$} & \textbf{e$_{2}$} & \textbf{a$_{1}$} & \textbf{a$_{2}$} & \textbf{•} \\\hline \hline 
-1 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0 & 0 & 300 & 200 & 300+1M & 200+1M & 13000 \\\hline 
-0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 1 & 0 & -0,0 & -0,0 & -0,0 & -0,0 & 0,0\\ 
+1 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0 & 0 & -300 & -200 & 300+1M & 200+1M & 13000 \\\hline 
+0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 1 & 0 & 0,0 & 0,0 & -0,0 & -0,0 & 0,0\\ 
 \hline 
-0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0 & 1 & -0,0 & -0,0 & -0,0 & -0,0 & 0\\ 
+0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0 & 1 & 0,0 & 0,0 & -0,0 & -0,0 & 0\\ 
 \hline 
-0 & 1 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0 & 0 & 1 & 0 & 1 & 0 & 30\\ 
+0 & 1 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0 & 0 & -1 & 0 & 1 & 0 & 30\\ 
 \hline 
-0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{1} & 0 & 0 & 0 & 1 & 0 & 1 & 20\\ 
+0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{1} & 0 & 0 & 0 & -1 & 0 & 1 & 20\\ 
 \hline 
 \end{tabular}} 
 \caption{Tabla intermedia 3, con la columna de 3 canonizada.} 
+\end{center} 
+\end{table} 
+\end{frame} 
+ 
+ 
+\begin{frame}  
+\frametitle{Tabla intermedia \#3} 
+\begin{table}[H] 
+\begin{center} 
+\resizebox{\linewidth}{!}{ 
+\begin{tabular}{|*{10}{c|}} 
+\hline 
+\textbf{Z}  & \textbf{Camiones
+} & \textbf{  Carros
+} & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{e$_{1}$}} & \textbf{e$_{2}$} & \textbf{a$_{1}$} & \textbf{a$_{2}$} & \textbf{•} \\\hline \hline 
+1 & 0 & 0 & 0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{-300} & -200 & 300+1M & 200+1M & 13000 \\\hline 
+0 & 0 & 0 & 1 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0,0} & 0,0 & -0,0 & -0,0 & 0,0\\ 
+\hline 
+0 & 0 & 0 & 0 & 1 & \cellcolor{color_pivote}\textbf{0,0} & 0,0 & -0,0 & -0,0 & 0\\ 
+\hline 
+0 & 1 & 0 & 0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{-1} & 0 & 1 & 0 & 30\\ 
+\hline 
+0 & 0 & 1 & 0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & -1 & 0 & 1 & 20\\ 
+\hline 
+\end{tabular}} 
+\caption{Tabla intermedia 3, durante el pivoteo.} 
+{\scriptsize Cálculos: 0,0/0,0 = 1,2 | \textbf{0/0,0 = 0} | } 
+\end{center} 
+\end{table} 
+\end{frame} 
+ 
+ 
+\begin{frame}  
+\frametitle{Tabla intermedia \#4} 
+\begin{table}[H] 
+\begin{center} 
+\resizebox{\linewidth}{!}{ 
+\begin{tabular}{|*{10}{c|}} 
+\hline 
+\textbf{Z}  & \textbf{Camiones
+} & \textbf{  Carros
+} & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{\textbf{e$_{1}$}} & \textbf{e$_{2}$} & \textbf{a$_{1}$} & \textbf{a$_{2}$} & \textbf{•} \\\hline \hline 
+1 & 0 & 0 & 0 & 15000 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 100 & 1M & -100+1M & 13000,0 \\\hline 
+0 & 0 & 0 & 1 & -0,8 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 0,0 & 0 & -0,0 & 0,0\\ 
+\hline 
+0 & 0 & 0 & 0 & 50 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{1} & 1 & -1 & -1 & 0\\ 
+\hline 
+0 & 1 & 0 & 0 & 50 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & 1 & 0 & -1 & 30\\ 
+\hline 
+0 & 0 & 1 & 0 & 0 & \cellcolor{color_columna_candidata}\textcolor{color_blanco}{0} & -1 & 0 & 1 & 20\\ 
+\hline 
+\end{tabular}} 
+\caption{Tabla intermedia 4, con la columna de 6 canonizada.} 
 \end{center} 
 \end{table} 
 \end{frame} 
@@ -287,16 +340,16 @@ $
 \begin{tabular}{|*{10}{c|}} 
 \hline 
 \textbf{Z}  & \textbf{Camiones
-} & \textbf{Automoviles
+} & \textbf{  Carros
 } & \textbf{s$_{1}$} & \textbf{s$_{2}$} & \textbf{e$_{1}$} & \textbf{e$_{2}$} & \textbf{a$_{1}$} & \textbf{a$_{2}$} & \textbf{•} \\\hline \hline 
-1 & 0 & 0 & 0 & 0 & 300 & 200 & 300+1M & 200+1M & 13000 \\\hline 
-0 & 0 & 0 & 1 & 0 & -0,0 & -0,0 & -0,0 & -0,0 & 0,0\\ 
+1 & 0 & 0 & 0 & 15000 & 0 & 100 & 1M & -100+1M & 13000,0 \\\hline 
+0 & 0 & 0 & 1 & -0,8 & 0 & 0,0 & 0 & -0,0 & 0,0\\ 
 \hline 
-0 & 0 & 0 & 0 & 1 & -0,0 & -0,0 & -0,0 & -0,0 & 0\\ 
+0 & 0 & 0 & 0 & 50 & 1 & 1 & -1 & -1 & 0\\ 
 \hline 
-0 & 1 & 0 & 0 & 0 & 1 & 0 & 1 & 0 & 30\\ 
+0 & 1 & 0 & 0 & 50 & 0 & 1 & 0 & -1 & 30\\ 
 \hline 
-0 & 0 & 1 & 0 & 0 & 0 & 1 & 0 & 1 & 20\\ 
+0 & 0 & 1 & 0 & 0 & 0 & -1 & 0 & 1 & 20\\ 
 \hline 
 \end{tabular}} 
 \caption{Tabla final.} 
@@ -312,7 +365,7 @@ $
 {\scriptsize Fábrica de carros
 } 
 \begin{itemize} 
-\item $Z = 13000$ 
+\item $Z = 13000,0$ 
 \item $x_{1} = 30$ 
 \item $x_{2} = 20$ 
 \end{itemize} 
